fixing_z-index_bug

--- a/src/components/PatellaRegistry/index.scss
+++ b/src/components/PatellaRegistry/index.scss
@@ -177,7 +177,7 @@
       color: #3366FF;
     }
     &--tableIcon {
-      z-index: 100;
+      z-index: 99;
     }
     &--tableIcon:before {
       content: '';
@@ -188,7 +188,7 @@
       background: url(/static/icons/full-screen.svg) no-repeat center / cover;
     }
     &--downloadIcon {
-      z-index: 100;
+      z-index: 99;
     }
     &--downloadIcon:before {
       content: '';
