--- a/src/pages/NurseryDocuments/components/Application/ApplicationRegistry/index.scss
+++ b/src/pages/NurseryDocuments/components/Application/ApplicationRegistry/index.scss
@@ -145,7 +145,7 @@
         }  
       }
       &--tableIcon {
-        z-index: 100;
+        z-index: 99;
       }
       &--tableIcon:before {
         content: '';
@@ -156,7 +156,7 @@
         background: url(/static/icons/full-screen.svg) no-repeat center / cover;
       }
       &--downloadIcon {
-        z-index: 100;
+        z-index: 99;
       }
       &--downloadIcon:before {
         content: '';
