--- a/src/pages/NurseryDocuments/components/RequestRegistry/index.scss
+++ b/src/pages/NurseryDocuments/components/RequestRegistry/index.scss
@@ -164,7 +164,7 @@
       color: #3366FF;
     }
     &--tableIcon {
-      z-index: 100;
+      z-index: 99;
     }
     &--tableIcon:before {
       content: '';
@@ -175,7 +175,7 @@
       background: url(/static/icons/full-screen.svg) no-repeat center / cover;
     }
     &--downloadIcon {
-      z-index: 100;
+      z-index: 99;
     }
     &--downloadIcon:before {
       content: '';
